Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109348

QtWebEngineView doesn't scroll word document

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.0, 6.6.0
    • 6.3.1, 6.4.0
    • WebEngine
    • None
    • macOS, Windows
    • e70f53df4 (dev), 10ab1018a (6.5)

    Description

      Here is a link to embed sample doc file on SharePoint: https://mediagun.sharepoint.com/:w:/g/Een6OEYIu59EsR862ATyOnsBakyKhOwTspVFBhfAW5lnzw?action=embedview&wdEaa=1

      You can open it in any browser and check that it is possible to scroll a doc by mouse or by arrow buttons. If you try the same in SimpleBrowser example app - nothing will work. In earlier Qt versions ( 6.2 and below) it worked.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mnegyokru Martin Negyokru
            aliakseihromau Alexey Gromov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes