Add InputEventObserver to child frames

RenderWidgetHostViewChildFrame does not Ack mouse wheel events.
RenderWidgetHostViewQt::handleWheelEvent expects Ack on every event.

Origin-Agent-Cluster is a HTTP response header that instructs
the browser to prevent synchronous scripting between same-site
cross-origin pages. Chromium also uses this header as a hint
that an origin should get its own separate resources, such as a
dedicated process. That's where child frames are created.
This feature is implemented in chromium 88.

Add observer to child frames that responds to wheel events.
Add test for wheel/scroll events on child frames.

Pick-to: 6.5
Fixes: QTBUG-109348
Change-Id: I20439a9068c5c2f8416a350891a6cf8830e1a5d6
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>